front-end, i18n: started adding tests

--- a/front-end/src/i18n/locales/en-gb.json
+++ b/front-end/src/i18n/locales/en-gb.json
@@ -1,5 +1,12 @@
 {
   "settings": {
-    "title": "Settings"
+    "title": "Settings",
+    "language": {
+      "label": "Language",
+      "options": {
+        "en-gb": "English",
+        "it": "Italian"
+      }
+    }
   }
 }
