--- a/front-end/src/i18n/locales/it.json
+++ b/front-end/src/i18n/locales/it.json
@@ -1,5 +1,12 @@
 {
   "settings": {
-    "title": "Impostazioni"
+    "title": "Impostazioni",
+    "language": {
+      "label": "Lingua",
+      "options": {
+        "en-gb": "Inglese",
+        "it": "Italiano"
+      }
+    }
   }
 }
