--- a/front-end/src/i18n/locales/it.json
+++ b/front-end/src/i18n/locales/it.json
@@ -8,5 +8,10 @@
         "it": "Italiano"
       }
     }
+  },
+  "home": {
+    "title": "Home",
+    "welcomeMessage": "Benvenuto nell'applicazione Meter Data Analytics.",
+    "appDescription": "Applicazione di analisi dei dati di contatori intelligenti costruita con lo stack MEVN (MongoDB, Express, Vue, Node.js)."
   }
 }
